--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>福田大学</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -13,19 +14,26 @@
         <header class="Header navigation">
             <div class="container navigation__inner">
                 <a href="/" class="navigation__logo">
-                    <img class="logo" src="https://doc.webpack-china.org/cd0bb358c45b584743d8ce4991777c42.svg" alt="webpack logo">
+                    <img class="logo" src="futian-logo.png" alt="futian logo">
                 </a>
                 <nav class="navigation__links">
-                    <a href="#" class="navigation__link ">首页</a>
+                    <a href="#" class="navigation__link navigation__link--active">首页</a>
                     <a href="#" class="navigation__link ">大学介绍</a>
                     <a href="#" class="navigation__link ">学员介绍</a>
                     <a href="#" class="navigation__link ">重点项目介绍</a>
-                    <a href="#" target="_blank" class="navigation__link ">咨询新闻</a>
-                    <a href="#" target="_blank" class="navigation__link ">网络学习平台</a>
+                    <a href="#" class="navigation__link ">咨询新闻</a>
+                    <a href="#" class="navigation__link ">网络学习平台</a>
                 </nav>
             </div>
         </header>
     </div>
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script>
+        $('.navigation__link').hover(function () {
+            $('.navigation__link').removeClass('navigation__link--active');
+            $(this).addClass('navigation__link--active');
+        });
+    </script>
 </body>
 
 </html>
