--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,52 @@
             </div>
         </header>
     </div>
+    <div>
+        <div class="jumbotron jumbotron-codelines">
+            <div class="container-lg p-responsive position-relative container">
+                <div class="d-md-flex flex-items-center gutter-md-spacious">
+                    <div class="col-md-7">
+                        <p>
+                            <img src="futian-welcome.png" alt="futian welcome">
+                        </p>
+                    </div>
+                    <div class="mx-auto col-md-5 hide-sm">
+                        <div class="rounded-1 text-gray bg-gray-light py-4 px-4 px-md-3 px-lg-4">
+                            <form accept-charset="UTF-8" action="/join" autocomplete="off" class="home-hero-signup js-signup-form" method="post">
+                                <h2>登录</h2>
+                                <dl class="form-group mt-0">
+                                    <dd>
+                                        <input type="text" name="user[login]" id="user[login]" class="form-control form-control-lg input-block" placeholder="用户名"
+                                            autofocus="autofocus">
+                                    </dd>
+                                </dl>
+                                <dl class="form-group">
+                                    <dd>
+                                        <input type="password" name="user[email]" id="user[email]" class="form-control form-control-lg input-block js-email-notice-trigger"
+                                            placeholder="登录密码">
+                                    </dd>
+                                </dl>
+                                <button class="btn btn-primary btn-large f4 btn-block" type="submit">登&nbsp;&nbsp;&nbsp;录</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-md-flex flex-items-center gutter-md-spacious">
+                    <div class="text-md-left">
+                        <p class="alt-lead mb-4">
+                            <i class="futian-loudspeaker"></i>关于近期苹果手机闪退解决方案的通知通啊啊啊</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div>
+        <footer class="footer">
+            <div class="container">
+                <p>©2017 Baidu 使用百度前必读 意见反馈 京ICP证030173号</p>
+            </div>
+        </footer>
+    </div>
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <script>
         $('.navigation__link').hover(function () {
