--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
                 </a>
                 <nav class="navigation__links">
                     <a href="#" class="navigation__link navigation__link--active">首页</a>
-                    <a href="#" class="navigation__link ">大学介绍</a>
+                    <a href="univ-intro.html" target="_blank" class="navigation__link ">大学介绍</a>
                     <a href="#" class="navigation__link ">学院介绍</a>
                     <a href="#" class="navigation__link ">重点项目介绍</a>
                     <a href="#" class="navigation__link ">咨询新闻</a>
